@@ -18,7 +18,7 @@ DESCRIPTION
 -----------
 
 The *upscli_init()* function initialize upsclient module and set many
-SSL-related properties: 'certverify' to 1 makes certificate verification
+TLS/SSL-related properties: 'certverify' to 1 makes certificate verification
 required for all SSL connections and 'certpath' is the location of
 certificate database.
 
@@ -41,6 +41,15 @@ files.
 If compiled with NSS and using SSL, you can specify 'certname' the name
 of the certificate to send to upsd and 'certpasswd' the password used
 to decrypt certificate private key.
+
+If compiled with NSS, it would normally log either the infamous message
+"Init SSL without certificate database" if no 'certpath' was provided,
+or "Init SSL with certificate database located at %s" otherwise.
+Since some programmatic consumers become confused by such extra text on
+the `stderr` of tools they call (such as monitoring systems doing `upsc`
+queries), you can export an environment variable `NUT_QUIET_INIT_SSL`
+with string values "true", "TRUE" or "1", to avoid logging these messages
+and just emit them as debug stream (at verbosity 1 or higher).
 
 You can call linkman:upscli_add_host_cert[3] to register specific host
 security policy before initialize connections to them.
